--- a/recursion/6603/6603.vcxproj
+++ b/recursion/6603/6603.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{3ED752BC-93B5-4BC3-BE55-CF65EFCAAA4E}</ProjectGuid>
-    <RootNamespace>게임판덮기</RootNamespace>
+    <ProjectGuid>{10682563-73F7-4E4B-B5E3-459AF37D75DB}</ProjectGuid>
+    <RootNamespace>My6603</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,7 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="게임판덮기.cpp" />
+    <ClCompile Include="6603.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
