--- a/baekjoon/11060/11060.vcxproj.filters
+++ b/baekjoon/11060/11060.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="11060.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
