--- a/basic/implementation/combination2/combination2.vcxproj
+++ b/basic/implementation/combination2/combination2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{59f15560-3843-4a22-b456-65ae017f5372}</ProjectGuid>
-    <RootNamespace>My3752</RootNamespace>
+    <ProjectGuid>{f2362582-bef1-476e-96a6-f2470d082668}</ProjectGuid>
+    <RootNamespace>combination2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="combination_duplicate.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
